Implemented Firebase Auth for Simplicity

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,3 +48,10 @@ table {
 }
 
 /* END CSS RESET */
+
+.flex-column-centered {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
