--- a/client/src/components/Home/index.css
+++ b/client/src/components/Home/index.css
@@ -1,24 +1,21 @@
-.Home_Button {
-    background-color: rgb(135, 206, 235);
-    
-}
-
 .Home_ButtonDiv {
     display: flex;
-    flex-flow: row-reverse;
-    background-color: rgba(255, 255, 255, 0);
-    margin-bottom: -18px;
+    justify-content: flex-end;
 }
 
 .Home_Banner {
-    position: absolute;
-    z-index: -1;
+    background: url('/img/HomeBanner.svg') no-repeat center center fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 90vh;
 }
 
 .Home_Content {
-
+    display: flex;
+    justify-content: center;
 }
 
-.Home_Bottom {
-    
+.Home_Button {
+    background-color: white !important;
+    margin: .4rem !important;
 }
