--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 62.5%;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -46,12 +46,41 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+* {
+	box-sizing: border-box;
+}
 /* END CSS RESET */
 
+/* BEGIN GENERIC CSS */
 .flex-column-centered {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.flex-row-centered {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.Content_container {
+	display: flex;
+	flex-direction: row;
+	margin: 0 auto;
+	width: 100%;
+	padding: 0 1rem;
+}
+
+.Main_container {
+    margin-left: 1rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    border: 1px solid rgb(119, 136, 153);
+	border-radius: .4rem;
 }
