Change Log removed the placeholder img tag from the .js and fixed the Home_Banner class to have the banner set as a background

--- a/client/src/components/Home/index.css
+++ b/client/src/components/Home/index.css
@@ -11,7 +11,9 @@
 }
 
 .Home_Banner {
-    position: absolute;
+    background: url('../../assets/HomeBanner.svg') no-repeat center center;
+    width: auto;
+    height: 623px;
     z-index: -1;
 }
 
@@ -20,5 +22,5 @@
 }
 
 .Home_Bottom {
-    
+
 }
