--- a/client/src/components/Billing/Billing.css
+++ b/client/src/components/Billing/Billing.css
@@ -1,13 +1,32 @@
 .Premium_Content {
     font-size: 1.5rem;
-    text-align: center;
+    margin-left: 19%;
+    margin-right: 19%;
+    margin-bottom: 1%;
 }
 .title10 {
+    display: flex;
     font-size: 3rem;
+    background-color: beige;
+    padding-left: 25%;
+    font-weight: bold;
 }
 h1 {
     font-size: 3rem;
 }
 .example {
     width: 100%;
+    height: 1000px;
+}
+.Stripe_Modal {
+    background-color: white;
+}
+.ModalButtonStripe {
+    margin-left: 42%;
+}
+.pText {
+    background-color: beige;
+}
+.checkout {
+    background-color: white;
 }
