--- a/client/src/components/Billing/Billing.css
+++ b/client/src/components/Billing/Billing.css
@@ -1,14 +1,16 @@
 .Premium_Content {
     font-size: 1.5rem;
-    margin-left: 19%;
-    margin-right: 19%;
-    margin-bottom: 1%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .title10 {
     display: flex;
     font-size: 3rem;
-    padding-left: 25%;
-    font-weight: bold;
+    font-weight: 400;
+    font-family: 'Roboto', serif;
 }
 .example {
     width: 100%;
