--- a/client/src/components/Billing/Billing.css
+++ b/client/src/components/Billing/Billing.css
@@ -6,11 +6,18 @@
     flex-direction: column;
     align-items: center;
 }
+.Main_container {
+    background-color: #7ebfff;
+}
 .title10 {
     display: flex;
     font-size: 3rem;
     font-weight: 400;
     font-family: 'Roboto', serif;
+}
+.radioGroup {
+    padding: 10px 10px 10px 10px;
+    border: 1px solid black;
 }
 .example {
     width: 100%;
@@ -22,7 +29,29 @@
     margin-left: 42%;
 }
 .checkout {
-    background-color: white;
+    background-color: #7ebfff;
+    width: 48%;
+    float: left;
+}
+legend {
+    margin-bottom: 10px;
+}
+.checkoutBoxes {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.submitButton {
+    font-size: 2rem;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+.checkoutCard {
+    padding: 10px;
+    border: 1px solid black;
 }
 .premTeam {
     font-weight: bold;
