--- a/client/src/components/Billing/Billing.css
+++ b/client/src/components/Billing/Billing.css
@@ -8,6 +8,9 @@
 }
 .Main_container {
     background-color: #7ebfff;
+    font-weight: bold;
+    color: ghostwhite;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .title10 {
     display: flex;
