--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -1,17 +1,29 @@
 .Auth_input {
-    margin: .5rem;
+    margin: 0.5rem;
     border-radius: 0.4rem;
     border: 0;
 }
+.Auth_input input {
+    box-sizing: border-box !important;
+    padding: 22px;
+    width: 11.4rem;
+    border-radius: 0.4rem;
+    box-shadow: 0px 0px 8px #000000dd;
+}
+.Auth_input input:before {
+    height: 0 !important;
+}
 
 .Auth_button {
-    margin: .3rem !important;
+    margin: 0.3rem !important;
 }
 
 .Auth_header {
     font-family: roboto;
     font-size: 2rem;
     margin: 1rem;
+    color: ghostwhite;
+    text-shadow: 0px 0px 8px #000000dd, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .Auth_prompt-fail {
