--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -23,7 +23,8 @@
     font-size: 2rem;
     margin: 1rem;
     color: ghostwhite;
-    text-shadow: 0px 0px 8px #000000dd, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000,
+        0px 0px 8px #000000dd;
 }
 
 .Auth_prompt-fail {
