--- a/client/src/index.css
+++ b/client/src/index.css
@@ -167,14 +167,20 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    min-width: 29rem;
     border: 1px solid rgb(119, 136, 153);
     border-radius: 0.4rem;
     font-family: 'Roboto', serif;
     height: inherit;
-	background-color: #7ebfff;
+    background-color: #a0b7ce;
+    /* background-color: #979797;  */
 	overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .Main_container::-webkit-scrollbar {display:none;}
+
+.routeContainer {
+    background-color: #EEEEEE;
+}
