Removed unused styles

--- a/client/src/components/Billing/Billing.css
+++ b/client/src/components/Billing/Billing.css
@@ -23,9 +23,9 @@
     flex-direction: column;
     height: 2.5rem;
     margin: 1rem 0 0 0;
-    padding: .5rem;
+    padding: 0.5rem;
     background-color: rgb(220, 253, 198) !important;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     border: 2px solid rgb(116, 167, 82) !important;
 }
 .submitButton {
