Working on merging

--- a/client/src/components/Settings/Settings.css
+++ b/client/src/components/Settings/Settings.css
@@ -1,5 +1,23 @@
+.Settings_info {
+    font-family: 'Roboto', serif;
+    font-weight: 400;
+    font-size: 2rem;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.Settings_info--Oauth {
+    font-weight: 400;
+    color: rgb(166, 255, 0) !important;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000,
+        0px 0px 6px #000000dd;
+}
+
 .title10 {
-    font-family: roboto;
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto', serif;
     font-weight: 400;
     font-size: 2rem;
     margin: 1rem;
@@ -11,37 +29,25 @@
     padding: 1rem;
     border: 1px solid black;
 }
-.legend {
-    margin-bottom: 10px;
-}
-.checkoutBoxes {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    height: 2.5rem;
-    margin: 1rem 0 0 0;
-    background-color: rgb(198, 235, 253) !important;
-    border-radius: 0.5rem;
-}
-.submitButton {
+
+.Settings_form {
+    font-family: 'Roboto', serif;
+    font-weight: 400;
     font-size: 2rem;
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    margin: 1rem 0 !important;
-    width: 10rem;
-}
-.checkoutCard {
-    /* height: 6rem; */
-    padding: 1rem;
-    border: 1px solid black;
-}
-.premTeam {
-    font-weight: bold;
-    text-align: center;
 }
 
-.fieldset {
-    margin: 1rem !important;
-    width: 25rem;
+.Settings_passwords {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.Settings_input {
+    width: 200;
+}
+
+.Settings_submit {
+    width: 5rem;
 }
