--- a/client/src/index.css
+++ b/client/src/index.css
@@ -165,7 +165,7 @@ table {
     width: 100%;
     min-width: 29rem;
     border: 1px solid rgb(119, 136, 153);
-    border-radius: 0.4rem;
+    /* border-radius: 0.4rem; */
     font-family: 'Roboto', serif;
     height: inherit;
     background-color: #a0b7ce;
