--- a/client/src/index.css
+++ b/client/src/index.css
@@ -164,11 +164,11 @@ table {
     align-items: center;
     width: 100%;
     min-width: 29rem;
-    border: 1px solid rgb(119, 136, 153);
+    /* border: 1px solid rgb(119, 136, 153); */
     /* border-radius: 0.4rem; */
     font-family: 'Roboto', serif;
     height: inherit;
-    background-color: #a0b7ce;
+    /* background-color: #a0b7ce; */
     /* background-color: #979797;  */
 	overflow-y: auto;
     -webkit-overflow-scrolling: touch;
