Styling and functionality

--- a/client/src/components/Auth/Auth.css
+++ b/client/src/components/Auth/Auth.css
@@ -8,7 +8,7 @@
     padding: 22px;
     width: 11.4rem;
     border-radius: 0.4rem;
-    box-shadow: 0px 0px 8px #000000dd;
+    box-shadow: var(--grayRedBlue_shadow);
     background-color: white;
 }
 .Auth_input input:before {
@@ -24,14 +24,12 @@
     font-weight: bold;
     font-size: 2rem;
     margin: 1rem;
-    color: #324151;
-    /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000,
-        0px 0px 8px #000000dd; */
+    color: var(--grayRedBlue_header);
 }
 
 .Auth_prompt-fail {
     margin: 1rem;
-    color: red;
+    color: var(--grayRedBlue_secondary);
     font-weight: bold;
     width: 18rem;
     text-justify: auto;
@@ -43,4 +41,12 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     width: 11.9rem;
+}
+
+.Auth_wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: nowrap;
 }
