--- a/client/src/index.css
+++ b/client/src/index.css
@@ -153,26 +153,22 @@ table {
     flex-direction: row;
     margin: 0 auto;
     width: 100%;
-    padding: 0 1rem;
+    height: inherit;
 }
 
 .Main_container {
-    margin-left: 1rem;
-    padding: 1rem;
+    min-height: 100vh;
+    width: 100%;
+    padding: 7rem 1rem 1rem 11rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
     min-width: 29rem;
     /* border: 1px solid rgb(119, 136, 153); */
     /* border-radius: 0.4rem; */
     font-family: 'Roboto', serif;
-    height: inherit;
     /* background-color: #a0b7ce; */
     /* background-color: #979797;  */
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .Main_container::-webkit-scrollbar {
@@ -181,4 +177,35 @@ table {
 
 .routeContainer {
     background-color: #eeeeee;
+    height: inherit;
+    width: 100vw;
+}
+
+.title10 {
+    display: flex;
+    justify-content: center;
+    font-family: 'Roboto', serif;
+    font-weight: 900;
+    font-size: 2rem;
+    margin: 1rem;
+    color: var(--grayRedBlue_header);
+}
+
+/* Themes */
+/* grayRedBlue */
+:root {
+    /* Component Spacing Main */
+    --grayRedBlue_padding: 7rem 1rem 1rem 12.2rem;
+
+    /* Colors and Styles */
+    --grayRedBlue_header: #324151;
+    --grayRedBlue_background: #eeeeee;
+    --grayRedBlue_border: #d1d1d1;
+    --grayRedBlue_primary: #3f51b5;
+    --grayRedBlue_secondary: #f50057;
+    --grayRedBlue_nav: #324151;
+    --grayRedBlue_border_light: #74a752;
+    --grayRedBlue_highlight: #dcfdc6;
+    --grayRedBlue_shadow: 0px 1px 3px 0px rgba(15, 12, 12, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+        0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
