--- a/client/src/index.css
+++ b/client/src/index.css
@@ -151,8 +151,9 @@ table {
 .Content_container {
     display: flex;
     flex-direction: row;
-    margin: 0 auto;
+    margin-left: 9rem;
     width: 100%;
+    height: 100vh;
     padding: 0 1rem;
 }
 
@@ -164,11 +165,11 @@ table {
     align-items: center;
     width: 100%;
     min-width: 29rem;
-    border: 1px solid rgb(119, 136, 153);
-    border-radius: 0.4rem;
+    /*border: 1px solid rgb(119, 136, 153);*/
+    /*border-radius: 0.4rem;*/
     font-family: 'Roboto', serif;
     height: inherit;
-    background-color: #a0b7ce;
+    /*background-color: #a0b7ce;*/
     /* background-color: #979797;  */
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
@@ -181,4 +182,5 @@ table {
 
 .routeContainer {
     /*background-color: #eeeeee;*/
+    height: 100vh;
 }
