--- a/client/src/index.css
+++ b/client/src/index.css
@@ -160,7 +160,7 @@ table {
 .Main_container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
     width: 100%;
     min-width: 29rem;
