cleaned up warnings and changed bgcolor to white

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -171,6 +171,6 @@ table {
 
 .routeContainer {
     /*background-color: #eeeeee;*/
-    background-color: #e0f2f1;
+    background-color: white;
     height: 100vh;
 }
