--- a/client/src/components/RocketQuestion/RocketQuestion.css
+++ b/client/src/components/RocketQuestion/RocketQuestion.css
@@ -1,15 +1,38 @@
 .answer {
     background-color: pink !important;
-    padding-left: 1rem;
+    padding: 0 .5rem;
+    border-radius: 0.5rem;
+    margin: 0 0 .25rem 0;
+    box-shadow: 0px 3px 8px rgba(0,0,0,0.2);
+    border: 1px solid #A9A9A9;
 }
 .answer--correct {
     background-color: greenyellow !important;
-    padding-left: 1rem;
+    padding: 0 .5rem;
+    border-radius: 0.5rem;
+    margin: 0 0 .25rem 0;
+    box-shadow: 0px 3px 8px rgba(0,0,0,0.2);
+    border: 1px solid #A9A9A9;
 }
 .answer--correct span {
     font-size: 1rem;
     font-weight: bold;
+    padding: 0 .5rem;
+    
 }
 .answer span {
     font-size: 1rem;
+    padding: 0 .5rem; 
+}
+
+.choices {
+    padding: 0 .5rem;
+    border-radius: 0.5rem;
+    margin: 0 0 .25rem 0;
+    box-shadow: 0px 3px 8px rgba(0,0,0,0.2);
+    border: 1px solid #A9A9A9;
+}
+
+.choices:hover {
+    background-color: lightblue;
 }
