--- a/client/src/components/Settings/Settings.css
+++ b/client/src/components/Settings/Settings.css
@@ -10,8 +10,8 @@
 .Settings_info--Oauth {
     font-weight: 400;
     color: rgb(166, 255, 0) !important;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000,
-        0px 0px 6px #000000dd;
+    text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.425), 1px -1px 2px rgba(0, 0, 0, 0.425),
+        -1px 1px 2px rgba(0, 0, 0, 0.425), 1px 1px 2px rgba(0, 0, 0, 0.425), 0px 0px 6px #000000dd;
 }
 
 .radioGroup {
